--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <title>reCAPTCHA demo: Simple page</title>
             <script src="https://www.google.com/recaptcha/api.js" async defer></script>
             <form action="?" method="POST">
-      <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+      <div class="g-recaptcha" data-sitekey="6LcWGE0rAAAAAF9HMzpi5hxt--TIN4-FOh0P-duZ"></div>
     <br/>       
         <input type="submit" value="Submit">
     </div>
