--- a/index.html
+++ b/index.html
@@ -6,20 +6,43 @@
     <title>FORMULARIO</title>
     <script src="Mati.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            // https://dashboard.emailjs.com/admin/account
+            emailjs.init({
+              publicKey: "ui9DQ148HzhqjDxhU",
+            });
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById("contact-form").addEventListener('submit', function(event) {
+                event.preventDefault();
+                // these IDs from the previous steps
+                emailjs.sendForm('service_8bg8nks', 'template_4416gah', this)
+                    .then(() => {
+                        console.log('SUCCESS!');
+                    }, (error) => {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
 </head>
 <body>
     <br></br>
     <h2 style="text-align: center;">FORMULARIO: Datos Personales</h2>
     <br></br>
-    <form id="enviar">
+    <form id="contact-form" class="formulario">
         <div class="container">
         <input type="text" id="nombre" placeholder="Nombre" class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example"> <br><br>
         <input type="email" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="Ingrese Mail" aria-label=".form-control-lg"> <br><br>
         <input type="text" id="asunto" placeholder="Asunto" class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example"> <br><br>
-        <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="3" placeholder="Enviar Mensaje"></textarea> <br><br>
+        <textarea class="form-control form-control-lg" id="Mensaje" rows="3" placeholder="Enviar Mensaje"></textarea> <br><br>
     <div style="text-align: center;"placeholder="Mensaje" class="form-control form-control-lg" type="text" placeholder=".form-control-lg" aria-label=".form-control-lg example"> <br><br>
-      <div class="g-recaptcha" style="text-align: center;"data-sitekey="6LcWGE0rAAAAAF9HMzpi5hxt--TIN4-FOh0P-duZ"></div> <br><br>
+      <div class="g-recaptcha" style="text-align: center;"data-sitekey="6LcWGE0rAAAAAF9HMzpi5hxt--TIN4-FOh0P-duZ"></div> <br><br>  <!--el recaptcha solo funciona cuando el index abierto tiene hosting-->
         <div class="container">
             <div style="text-align: center;">
                 <button class="Enviar" onclick="send()">Enviar</button> <br><br>
